--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.3",
-    "grunt": "^1.0.1",
-    "load-grunt-configs": "^1.0.0",
-    "load-grunt-tasks": "^3.5.2"
+    "grunt": "^0.4.5"
   },
   "devDependencies": {
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-express": "^1.4.1",
-    "grunt-parallel": "^0.5.1"
+    "grunt-express-server": "^0.5.3",
+    "load-grunt-configs": "^1.0.0",
+    "load-grunt-tasks": "^3.5.2"
   }
 }
