--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "grunt": "^0.4.5"
   },
   "devDependencies": {
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-cssmin": "^2.2.0",
+    "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-express-server": "^0.5.3",
     "load-grunt-configs": "^1.0.0",
