--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.29",
-    "mongoose": "^4.10.7"
+    "mongoose": "^4.10.7",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
