--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "winston": "^2.3.1"
   },
   "devDependencies": {
+    "body-parser": "latest",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-concat": "^1.0.1",
@@ -51,9 +52,10 @@
     "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-express-server": "^0.5.3",
+    "grunt-rev": "^0.1.0",
     "grunt-update": "^0.2.3",
+    "grunt-usemin": "^3.1.1",
     "load-grunt-configs": "^1.0.0",
-    "load-grunt-tasks": "^3.5.2",
-    "body-parser": "latest"
+    "load-grunt-tasks": "^3.5.2"
   }
 }
