--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "i18n-express": "^1.1.2",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.29",
     "mongoose": "^4.10.7",
