--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
   ],
   "dependencies": {
     "jquery": "^3.2.1",
-    "bootstrap": "^3.3.7"
-  }
+    "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7"
+  },
+  "devDependencies": {}
 }
